[project]
name = "textcanvas"
version = "3.8.0"
authors = [
    { name="Quentin Richert", email="noreply@richert.co" },
]
description = "Draw to the terminal like an HTML Canvas."
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
keywords = ["tui", "canvas", "draw", "terminal", "console"]

[project.urls]
"Homepage" = "https://github.com/qrichert/textcanvas"

[tool.setuptools]
packages = ["textcanvas"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.docformatter]
style = "google"
black = true
wrap-summaries = 72
wrap-descriptions = 72
close-quotes-on-newline = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.coverage.report]
exclude_lines = [
    # Note: 'pass' should be included, use '...' for stubs.
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
]
